[package]
name = "sp1-wasm-verifier"
authors = ["Bhargav Annem, Yuwen Zhang"]
description = "A rust verifier for BN254 curve"
repository = "https://github.com/succinctlabs/sp1-wasm-verifier"
keywords = ["zero-knowledge", "cryptography", "zkSNARK", "SNARK", "gnark"]
categories = ["cryptography"]
readme = "README.md"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
version = "1.0.2"

# This is necessary for the wasm-bindgen.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
sp1-verifier = { workspace = true, default-features = false, features = [
    "compressed",
] }
sp1-primitives = { workspace = true }
sp1-stark = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
bincode = "1.3.3"
serde = "1.0.204"
serde-wasm-bindgen = "0.6"
strum = "0.26.3"
strum_macros = "0.26.4"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

# Optimize release builds
[profile.release]
opt-level = "s"
lto = true
